4th attempt. Fixed the gap between more button and the last content card, now it is performed with more-button's margin-top.

--- a/styles/style.css
+++ b/styles/style.css
@@ -133,7 +133,6 @@ ol {
   display: grid;
   gap: 25px;
   margin-right: 1px;
-  margin-bottom: 30px;
 }
 
 .content__list-item {
@@ -294,6 +293,8 @@ ol {
 .more-button {
   width: 390px;
   height: 34px;
+  padding-left: 10px;
+  margin-top: 30px;
 }
 
 .button:hover {
